@@ -1,0 +1,26 @@
+\."#############################################################################
+\."$Id: cerebro_flush_metric.3,v 1.1 2005-07-26 00:57:17 achu Exp $
+\."#############################################################################
+\."  Copyright (C) 2005 The Regents of the University of California.
+\."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
+\."  Written by Albert Chu <chu11@llnl.gov>.
+\."  UCRL-CODE-155989 All rights reserved.
+\."
+\."  This file is part of Cerebro, a collection of cluster monitoring tools
+\."  and libraries.  For details, see <http://www.llnl.gov/linux/cerebro/>.
+\."
+\."  Cerebro is free software; you can redistribute it and/or modify it under
+\."  the terms of the GNU General Public License as published by the Free
+\."  Software Foundation; either version 2 of the License, or (at your option)
+\."  any later version.
+\."
+\."  Cerebro is distributed in the hope that it will be useful, but WITHOUT ANY
+\."  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+\."  FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+\."  details.
+\."
+\."  You should have received a copy of the GNU General Public License along
+\."  with Cerebro; if not, write to the Free Software Foundation, Inc.,
+\."  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
+\."#############################################################################
+.so man3/cerebro_register_metric.3
