@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_module_devel.3.in,v 1.10 2005-07-22 17:45:33 achu Exp $
+\."$Id: cerebro_module_devel.3.in,v 1.11 2005-07-26 00:57:17 achu Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -515,4 +515,4 @@ the 'monitor_module_info' structure.
 
 
 .SH "SEE ALSO"
-libcerebro(3), cerebro_module(3), cerebro.conf(5)
+libcerebro(3), cerebro_module(3), cerebro.conf(5), cerebrod(8)
