@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_register_metric.3,v 1.4 2005-07-22 17:21:07 achu Exp $
+\."$Id: cerebro_register_metric.3,v 1.5 2005-07-26 00:57:17 achu Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -37,6 +37,8 @@ cerebro metric monitoring routines
 .BI "int cerebro_update_metric_value(cerebro_t handle, const char *metric_name, unsigned int metric_value_type, unsigned int metric_value_len, void *metric_value);"
 .sp
 .BI "int cerebro_resend_metric(cerebro_t handle, const char *metric_name);"
+.sp
+.BI "int cerebro_flush_metric(cerebro_t handle, const char *metric_name);"
 .br
 .SH "DESCRIPTION"
 \fBcerebro_register_metric()\fR registers a new metric that can be propogated by
@@ -62,6 +64,13 @@ this function is called to force a metric to be re-propogated.
 Metrics can be registered and propogated only if the
 .BR cerebrod(8)
 can speak.
+
+\fBcerebro_flush_metric()\fR flushes the currently known metric contents
+from the
+.BR cerebrod(8)
+daemon.  Metrics can only be flushed if the 
+.BR cerebrod(8)
+daemon can listen.
 
 .br
 .SH "RETURN VALUES"
@@ -126,4 +135,4 @@ An internal system error occurred.
 .SH "FILES"
 /usr/include/cerebro.h
 .SH "SEE ALSO"
-cerebro_errnum(3), cerebro_strerror(3)
+cerebro_errnum(3), cerebro_strerror(3), cerebrod(8)
