@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_set_hostname.3,v 1.9 2005-07-22 17:21:07 achu Exp $
+\."$Id: cerebro_set_hostname.3,v 1.10 2005-07-26 00:57:17 achu Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -109,4 +109,4 @@ Buffer overflow.
 .SH "SEE ALSO"
 cerebro_errnum(3), cerebro_strerror(3), cerebro_get_hostname(3),
 cerebro_get_port(3), cerebro_get_timeout_len(3), cerebro_get_flags(3),
-cerebro_get_metric_data(3)
+cerebro_get_metric_data(3), cerebrod(8)
