@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_metric_control_protocol.h.in,v 1.4 2005-07-22 17:21:07 achu Exp $
+ *  $Id: cerebro_metric_control_protocol.h.in,v 1.5 2005-07-26 00:57:17 achu Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -64,6 +64,7 @@
 #define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_UNREGISTER        1
 #define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_UPDATE            2
 #define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_RESEND            3
+#define CEREBRO_METRIC_CONTROL_PROTOCOL_CMD_FLUSH             4
 
 #define CEREBRO_METRIC_CONTROL_PATH  @METRIC_CONTROL_PATH@
 
